--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-cfgrammar = "0.7.0"
-lrlex = "0.7.0"
-lrpar = "0.7.0"
+cfgrammar = { git = "https://github.com/softdevteam/grmtools", rev = "0b61a58dc" }
+lrlex = { git = "https://github.com/softdevteam/grmtools", rev = "0b61a58dc" }
+lrpar = { git = "https://github.com/softdevteam/grmtools", rev = "0b61a58dc" }
 
 [dependencies]
-cfgrammar = "0.7.0"
-lrlex = "0.7.0"
-lrpar = "0.7.0"
+cfgrammar = { git = "https://github.com/softdevteam/grmtools", rev = "0b61a58dc" }
+lrlex = { git = "https://github.com/softdevteam/grmtools", rev = "0b61a58dc" }
+lrpar = { git = "https://github.com/softdevteam/grmtools", rev = "0b61a58dc" }
 num-traits = "0.2.11"
 
