get all this to work on my laptop
Disabling parser generation because upstream is broken in a weird
way (my patch was bad)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-cfgrammar = { git = "https://github.com/valarauca/grmtools", rev = "01670e4" }
-lrlex = { git = "https://github.com/valarauca/grmtools", rev = "01670e4" }
-lrpar = { git = "https://github.com/valarauca/grmtools", rev = "01670e4" }
+cfgrammar = "0.9.0"
+lrlex = "0.9.0"
+lrpar = "0.9.0"
 
 [dependencies]
-cfgrammar = { git = "https://github.com/valarauca/grmtools", rev = "01670e4" }
-lrlex = { git = "https://github.com/valarauca/grmtools", rev = "01670e4" }
-lrpar = { git = "https://github.com/valarauca/grmtools", rev = "01670e4" }
+cfgrammar = "0.9.0" 
+lrlex =     "0.9.0" 
+lrpar =     "0.9.0" 
 num-traits = "0.2.11"
 try_from = "0.3.2"
 serde = "1.0.114"
