--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ lrlex =     "0.9.0"
 lrpar =     "0.9.0" 
 num-traits = "0.2.11"
 try_from = "0.3.2"
-serde = "1.0.114"
+serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0"
 clap = "2.33.1"
-petgraph = "0.5.1"
+petgraph = { version = "0.5.1", features = ["serde-1"] }
