--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ lrlex = "0.9.0"
 lrpar = "0.9.0"
 
 [dependencies]
+lazy_static = "1.4.0"
 cfgrammar = "0.9.0" 
 lrlex =     "0.9.0" 
 lrpar =     "0.9.0" 
@@ -21,3 +22,5 @@ serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0"
 clap = "2.33.1"
 petgraph = { version = "0.5.1", features = ["serde-1"] }
+ansi_term = "0.12.1"
+itertools = "0.10.0"
