--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ clap = "2.33.1"
 petgraph = { version = "0.5.1", features = ["serde-1"] }
 ansi_term = "0.12.1"
 itertools = "0.10.0"
+seahash = "4.1.0"
